--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -145,28 +145,52 @@ collections:
                       label: "Images",
                       name: "images",
                       widget: "list",
-                      field:
-                        {
-                          label: "Image",
-                          name: "image",
-                          widget: "object",
-                          fields:
-                            [
-                              {
-                                label: "Image",
-                                name: "image",
-                                widget: "image",
-                                required: false,
-                                allow_multiple: true,
-                              },
-                              {
-                                label: "Caption",
-                                name: "caption",
-                                widget: "string",
-                                required: false,
-                              },
-                            ],
-                        },
+                      required: false,
+                      types:
+                        [
+                          {
+                            label: "Image",
+                            name: "image",
+                            widget: "object",
+                            fields:
+                              [
+                                {
+                                  label: "Image File",
+                                  name: "imageFile",
+                                  widget: "image",
+                                  required: false,
+                                  allow_multiple: true,
+                                },
+                                {
+                                  label: "Caption",
+                                  name: "caption",
+                                  widget: "string",
+                                  required: false,
+                                },
+                              ],
+                          },
+                          {
+                            label: "Video",
+                            name: "video",
+                            widget: "object",
+                            fields:
+                              [
+                                {
+                                  label: "Video File",
+                                  name: "videoFile",
+                                  widget: "file",
+                                  required: false,
+                                  allow_multiple: true,
+                                },
+                                {
+                                  label: "Caption",
+                                  name: "caption",
+                                  widget: "string",
+                                  required: false,
+                                },
+                              ],
+                          },
+                        ],
                     },
                   ],
               },
@@ -221,32 +245,6 @@ collections:
                       label: "Text",
                       name: "text",
                       widget: "markdown",
-                      required: false,
-                    },
-                  ],
-              },
-              {
-                label: "Video Section",
-                name: "video-section",
-                widget: "object",
-                fields:
-                  [
-                    {
-                      label: "Video File",
-                      name: "videoFile",
-                      widget: file,
-                      required: false,
-                    },
-                    {
-                      label: "Fallback Image",
-                      name: "fallbackImage",
-                      widget: image,
-                      required: false,
-                    },
-                    {
-                      label: "Caption",
-                      name: "caption",
-                      widget: "string",
                       required: false,
                     },
                   ],
@@ -836,6 +834,170 @@ collections:
           - { label: "Title", name: "title", widget: "string" }
           - { label: "Heading", name: "heading", widget: "string" }
           - { label: "Subheading", name: "subheading", widget: "string" }
+          - {
+              label: "Content",
+              name: "variable-content",
+              widget: "list",
+              required: false,
+              types:
+                [
+                  {
+                    label: "Image Section",
+                    name: "image-section",
+                    widget: "object",
+                    fields:
+                      [
+                        {
+                          label: "Column Start",
+                          name: "column-start",
+                          widget: "select",
+                          required: false,
+                          options:
+                            [
+                              "1",
+                              "2",
+                              "3",
+                              "4",
+                              "5",
+                              "6",
+                              "7",
+                              "8",
+                              "9",
+                              "10",
+                              "11",
+                            ],
+                        },
+                        {
+                          label: "Column End",
+                          name: "column-end",
+                          widget: "select",
+                          required: false,
+                          options:
+                            [
+                              "2",
+                              "3",
+                              "4",
+                              "5",
+                              "6",
+                              "7",
+                              "8",
+                              "9",
+                              "10",
+                              "11",
+                              "12",
+                              "13",
+                            ],
+                        },
+                        {
+                          label: "Images",
+                          name: "images",
+                          widget: "list",
+                          required: false,
+                          types:
+                            [
+                              {
+                                label: "Image",
+                                name: "image",
+                                widget: "object",
+                                fields:
+                                  [
+                                    {
+                                      label: "Image File",
+                                      name: "imageFile",
+                                      widget: "image",
+                                      required: false,
+                                      allow_multiple: true,
+                                    },
+                                    {
+                                      label: "Caption",
+                                      name: "caption",
+                                      widget: "string",
+                                      required: false,
+                                    },
+                                  ],
+                              },
+                              {
+                                label: "Video",
+                                name: "video",
+                                widget: "object",
+                                fields:
+                                  [
+                                    {
+                                      label: "Video File",
+                                      name: "videoFile",
+                                      widget: "file",
+                                      required: false,
+                                      allow_multiple: true,
+                                    },
+                                    {
+                                      label: "Caption",
+                                      name: "caption",
+                                      widget: "string",
+                                      required: false,
+                                    },
+                                  ],
+                              },
+                            ],
+                        },
+                      ],
+                  },
+                  {
+                    label: "Text Section",
+                    name: "text-section",
+                    widget: "object",
+                    fields:
+                      [
+                        {
+                          label: "Column Start",
+                          name: "column-start",
+                          widget: "select",
+                          required: false,
+                          options:
+                            [
+                              "1",
+                              "2",
+                              "3",
+                              "4",
+                              "5",
+                              "6",
+                              "7",
+                              "8",
+                              "9",
+                              "10",
+                              "11",
+                            ],
+                        },
+                        {
+                          label: "Column End",
+                          name: "column-end",
+                          widget: "select",
+                          required: false,
+                          options:
+                            [
+                              "2",
+                              "3",
+                              "4",
+                              "5",
+                              "6",
+                              "7",
+                              "8",
+                              "9",
+                              "10",
+                              "11",
+                              "12",
+                              "13",
+                            ],
+                        },
+                        {
+                          label: "Text",
+                          name: "text",
+                          widget: "markdown",
+                          required: false,
+                        },
+                      ],
+                  },
+                ],
+            }
           - {
               label: "Blog Reference",
               name: "blog-reference",
