--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -1006,6 +1006,61 @@ collections:
                         },
                       ],
                   },
+                  {
+                    label: "Reference Section",
+                    name: "reference-section",
+                    widget: "object",
+                    fields:
+                      [
+                        {
+                          label: "Column Start",
+                          name: "column-start",
+                          widget: "select",
+                          required: false,
+                          options:
+                            [
+                              "1",
+                              "2",
+                              "3",
+                              "4",
+                              "5",
+                              "6",
+                              "7",
+                              "8",
+                              "9",
+                              "10",
+                              "11",
+                            ],
+                        },
+                        {
+                          label: "Column End",
+                          name: "column-end",
+                          widget: "select",
+                          required: false,
+                          options:
+                            [
+                              "2",
+                              "3",
+                              "4",
+                              "5",
+                              "6",
+                              "7",
+                              "8",
+                              "9",
+                              "10",
+                              "11",
+                              "12",
+                              "13",
+                            ],
+                        },
+                        {
+                          label: "Text",
+                          name: "text",
+                          widget: "markdown",
+                          required: false,
+                        },
+                      ],
+                  },
                 ],
             }
           - {
@@ -1016,31 +1071,55 @@ collections:
               types:
                 [
                   {
-                    label: "Blog Reference",
-                    name: "blog-reference",
-                    widget: "relation",
-                    collection: "blog",
-                    search_fields: ["title"],
-                    value_field: "title",
-                    display_fields: ["title"],
+                  label: "Blog Reference",
+                  name: "blog-reference",
+                  widget: "object",
+                  fields:
+                    [
+                      {
+                        label: "Reference",
+                        name: "reference",
+                        widget: "relation",
+                        collection: "blog",
+                        search_fields: ["title"],
+                        value_field: "title",
+                        display_fields: ["title"],
+                      }
+                    ]
                   },
                   {
-                    label: "Work Reference",
-                    name: "work-reference",
-                    widget: "relation",
-                    collection: "work",
-                    search_fields: ["title"],
-                    value_field: "title",
-                    display_fields: ["title"],
+                  label: "Work Reference",
+                  name: "work-reference",
+                  widget: "object",
+                  fields:
+                    [
+                      {
+                        label: "Reference",
+                        name: "reference",
+                        widget: "relation",
+                        collection: "work",
+                        search_fields: ["title"],
+                        value_field: "title",
+                        display_fields: ["title"],
+                      }
+                    ]
                   },
                   {
-                    label: "Space Reference",
-                    name: "space-reference",
-                    widget: "relation",
-                    collection: "space",
-                    search_fields: ["title"],
-                    value_field: "title",
-                    display_fields: ["title"],
+                  label: "Space Reference",
+                  name: "space-reference",
+                  widget: "object",
+                  fields:
+                    [
+                      {
+                        label: "Reference",
+                        name: "reference",
+                        widget: "relation",
+                        collection: "space",
+                        search_fields: ["title"],
+                        value_field: "title",
+                        display_fields: ["title"],
+                      }
+                    ]
                   },
                 ],
             }
